# potafloes

./: MANIFEST.in  Pipfile  README.md  ouat.py  pyproject.toml  requirements.dev.txt  setup.cfg  setup.py  test.py
.github/workflows/: ci.yml  continuous-integration.yml  integration-tests.yml
src/ouat/: __init__.py  bounded_stream.py  context.py  entity.py  entity_context.py  entity_domain.py  exceptions.py  stream.py  task_manager.py
src/patasync/: attachment.py  bounded_stream.py  context.py  entity.py  entity_context.py  entity_domain.py  exceptions.py  stream.py  value.py
src/potafloes/: __init__.py  attachment.py  attribute.py  const.py  context.py  definition.py  entity.py  entity_context.py  entity_domain.py  entity_type.py  exceptions.py
src/potafloes/attachments/: __init__.py  bag.py  single.py
tests/: conftest.py  test_attachments.py  test_attributes.py  test_entity_scope.py  test_implementations.py  test_index.py
