[metadata]
name = potafloes
version = 0.0.1
description = Python dataflow library
long_description = file: README.md
long_description_content_type = "text/markdown"
author = Guillaume Everarts de Velp
author_email = edvgui@gmail.com
license = MIT
copyright = 2023 Guillaume Everarts de Velp
keywords = dataflow, asyncio
url = https://github.com/edvgui/potafloes
classifiers = 
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Quality Assurance

[options]
zip_safe=False
include_package_data=True

[options.packages.find]
include = src*

[flake8]
# H101 Include your name with TODOs as in # TODO(yourname). This makes it easier to find out who the author of the comment was.
# H302 Do not import objects, only modules DEPRICATED
# H404 Multi line docstrings should start without a leading new line.
# H405 multi line docstring summary not separated with an empty line
# H301 Do not import more than one module per line (*)
# H306 Alphabetically order your imports by the full module path.
# H904 Wrap long lines in parentheses instead of a backslash
# E203 whitespace before ':' " on list slice.
# E266 too many leading ‘#’ for block comment
# E252 missing whitespace around parameter equals
# w503 line break occurred before a binary operator (black and flake disagree)
# E402 module level import not at top of file
# E203 whitespaces and the slice operator. (black and flake disagree)
ignore = H405,H404,H302,H306,H301,H101,H801,E402,W503,E252,E203,F722
max-line-length = 128
exclude = **/.env,.venv,.git,.tox,dist,doc,**egg
copyright-check=True
copyright-author=Guillaume Everarts de Velp
select = E,F,W,C,BLK,I

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
# Black splits up import statements that are too long
# Setting isorts line_length to 88 (blacks default) so they do not collide
line_length=88
known_third_party=pytest

[black]
line-length=128
target-version = 'py310', 'py311'

[mypy]
check_untyped_defs = True
disallow_any_generics = True
disallow_incomplete_defs = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_decorators = True
disallow_untyped_defs = True
follow_imports = silent
no_implicit_optional = True
no_implicit_reexport = True
show_error_codes = True
strict_optional = True
warn_redundant_casts = True
warn_return_any = True
warn_unused_configs = True
warn_unused_ignores = True

[egg_info]
tag_build = dev0
